# medicalDrone

./: CMakeLists.txt  README.md  package.xml
javascript_sim/: README.md  index.html
javascript_sim/js/: index.js
javascript_sim/res/maps/: map.kra  map.png~
launch/: aerial_drone.launch  empty_world.launch  turtle_teleop.launch  two_wheeled.launch
models/drone/: model.config  model.sdf
models/drone/meshes/: model.dae
object_detect/: .gitignore  FirstDetection.py  readme.md
robots/two_wheeled_robot/: diff_drive.yaml  m2wr.xacro
robots/zipline_drone/: model.config  model.sdf  new.urdf  zipline_drone.gazebo  zipline_drone.urdf
ros_sim/: CMakeLists.txt  package.xml
ros_sim/launch/: drone.launch  empty_world.launch  sjfu.launch  soda_cans.launch  turtle_teleop.launch
ros_sim/models/drone/: model.sdf
ros_sim/scripts/: command_node.py  gotogoal.py  keyboard_teleop.py  manual_drive.py  plane_driver.py  turtle_teleop.py  two_wheel_driver.py
scripts/: drive_node.py  turtle_teleop.py
unity/plane_train_race/: README.md  drone.blend
unity/plane_train_race/Aircraft/: csharp_timers.json
unity/plane_train_race/Aircraft/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  (+1 more)
unity/plane_train_race/config/: trainer_config.yaml
unity/plane_train_race/summaries/: aircraft_1_timers.json  aircraft_2_AircraftLearning.csv  aircraft_2_timers.json  aircraft_3_AircraftLearning.csv  aircraft_3_timers.json  aircraft_4_AircraftLearning.csv  aircraft_4_timers.json  aircraft_5_AircraftLearning.csv  aircraft_5_timers.json
worlds/: soda_can_palace.world
(+104 files in other folders)
